try image 	<img src="PapaPicheDonC.jpeg" > 	<br><br>

--- a/index.html
+++ b/index.html
@@ -171,9 +171,13 @@
 </head>
 <body>
     <div class="header">
-        <h1>Developer Resources</h1>
+        <h1>Developer Resources by Papa Piche</h1>
         <p>Explore resources for Azure, .NET, C++, Windows, and Linux development</p>
     </div>
+
+   	<img src="images/PapaPicheDonC.jpeg" >
+	<br><br>
+
 
     <div class="container">
         <div class="tabs">
