--- a/developer-resources.html
+++ b/developer-resources.html
@@ -251,10 +251,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>Developer Resources - Christophe Pichaud</h1>
+        <h1>Developer Resources</h1>
         <p>Professional Experience & Technical Expertise</p>
-        <p><a href="developer-resources.html" style="color: white;">🛠️💻🌍 Missions from 1995 to 2025...</a></p><br>
-     	<img src="images/PapaPicheDonC.jpeg" >
     </div>
 
     <div class="container">
