--- a/index-old.html
+++ b/index-old.html
@@ -268,6 +268,7 @@
     <div class="header">
         <h1>Developer Resources by Papa Piche</h1>
         <p>Explore resources for Azure, .NET, C++, Windows, and Linux development</p>
+        <p><a href="developer-resources.html" style="color: white;">🛠️💻🌍 Missions from 1995 to 2025...</a></p><br>
      	<img src="images/PapaPicheDonC.jpeg" >
     </div>
 
