--- a/index.html
+++ b/index.html
@@ -253,10 +253,18 @@
     <div class="header">
         <h1>Developer Resources - Christophe Pichaud</h1>
         <p>Professional Experience & Technical Expertise</p>
-        <p><a href="developer-resources.html" style="color: white;">🛠️💻🌍 Missions from 1995 to 2025...</a></p><br>
-     	<img src="images/PapaPicheDonC.jpeg" >
+        <!-- <p>🛠️💻🌍 Missions from 1995 to 2025...</p><br>-->
+        <a href="developer-resources.html" style="color: white;">🛠️💻🌍 Missions from 1995 to 2025...</a><br>
+        <a href="https://www.amazon.fr/s?i=stripbooks&rh=p_27%3AChristophe%2BPichaud&s=date-desc-rank&qid=1765707087&text=Christophe+Pichaud&ref=sr_st_date-desc-rank" style="color: white;">My books on Amazon</a> | 
+     	<!-- <img src="images/PapaPicheDonC.jpeg" ><br> -->
+        <a href="https://github.com/ChristophePichaud" style="color: white;">My GitHub</a><br>
+        <a href="https://christophep.wordpress.com/" style="color: white;">Blog en-us</a> | <a href="https://christophepichaud.home.blog/" style="color: white;">Blog fr-fr</a> | 
+        <a href="https://dotnetrangers.wordpress.com/" style="color: white;">Blog Rangers v1</a> | <a href="https://netazurerangers.wordpress.com/" style="color: white;">Blog Rangers v2</a><br>
+        <br>
+     	<img src="images/PapaPicheDonC.jpeg" width="25%" height="25%"><br>
+     	<img src="images/MesBooks.jpg" width="25%" height="25%"><br>
     </div>
-
+  
     <div class="container">
         <div class="stats">
             <div class="stat-card">
